	PR target/45701 	* config/arm/arm.c (any_sibcall_uses_r3): New function. 	(arm_get_frame_offsets): Use it.

2011-01-25  Yao Qi  <yao@codesourcery.com>

        PR target/45701
        * gcc.target/arm/pr45701-1.c: New test.
        * gcc.target/arm/pr45701-2.c: New test.
	* gcc.target/arm/pr45701-3.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@169240 138bc75d-0d04-0410-961f-82ee72b054a4